k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oc-client-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oc-client-backend
  template:
    metadata:
      labels:
        app: oc-client-backend
    spec:
      imagePullSecrets:
        - name: ghcr-creds
      containers:
        - name: app
          image: IMAGE_PLACEHOLDER
          ports:
            - containerPort: 3000
